fixed horizontal scrolling issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,7 @@ body {
     -webkit-transition: font-size 0s 0s ease-in-out;
     transition: font-size 0s 0s ease-in-out;
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     border-collapse: collapse;
     table-layout: fixed;
 }
